# clawdstrike

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.hushd  Dockerfile.registry  GOVERNANCE.md  PRODUCTION_READINESS_TEST_PLAN.md  README.md  SECURITY.md  biome.json  bun.lockb  deny.toml  mise.toml  moon.yml  package-lock.json  package.json
.cargo/: config.toml
.claude-plugin/: marketplace.json
.codex/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.3-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md  v4.0-MILESTONE-AUDIT.md  v6.0-MILESTONE-AUDIT.md
apps/: README.md
apps/workbench/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/workbench/src-tauri/capabilities/: default.json
apps/workbench/src-tauri/resources/: README.md
apps/workbench/src-tauri/src/: main.rs
apps/workbench/src-tauri/src/commands/: capability.rs  detection.rs  mcp_sidecar.rs  mod.rs  repo_roots.rs  stronghold.rs  terminal.rs  workbench.rs  worktree.rs
assets/: capture-promo.mjs
clawdstrike-plugin/: .mcp.json  README.md  bun.lockb  tsconfig.json
crates/: README.md
crates/bridges/auditd-bridge/: Cargo.toml
crates/bridges/auditd-bridge/src/: audit.rs  error.rs  lib.rs  main.rs  mapper.rs
crates/bridges/darwin-telemetry-bridge/: Cargo.toml
crates/bridges/darwin-telemetry-bridge/src/: error.rs  event.rs  fsevents.rs  lib.rs  main.rs  mapper.rs  process.rs  unified_log.rs
crates/bridges/hush-go-native/: Cargo.toml  build.sh  cbindgen.toml
crates/bridges/hush-go-native/src/: lib.rs
crates/bridges/k8s-audit-bridge/: Cargo.toml
crates/bridges/k8s-audit-bridge/src/: error.rs  lib.rs  main.rs  mapper.rs  webhook.rs
crates/libs/bridge-runtime/: Cargo.toml
crates/libs/bridge-runtime/src/: lib.rs
crates/libs/clawdstrike-broker-protocol/: Cargo.toml
crates/libs/clawdstrike-broker-protocol/src/: lib.rs
crates/libs/clawdstrike-guard-sdk/: Cargo.toml
crates/libs/clawdstrike-logos/: Cargo.toml
crates/libs/clawdstrike-logos/src/: atoms.rs  compiler.rs  lib.rs  verifier.rs
crates/libs/clawdstrike-logos/src/guards/: computer_use.rs  egress_allowlist.rs  forbidden_path.rs  input_injection_capability.rs  jailbreak.rs  mcp_tool.rs  mod.rs  patch_integrity.rs  path_allowlist.rs  prompt_injection.rs  remote_desktop_side_channel.rs  secret_leak.rs  shell_command.rs
crates/libs/clawdstrike-logos/tests/: verify_builtin_rulesets.rs
crates/libs/clawdstrike-ocsf/: Cargo.toml
crates/libs/clawdstrike-ocsf/src/: base.rs  decision.rs  fleet.rs  lib.rs  severity.rs  validate.rs
crates/libs/clawdstrike-ocsf/src/classes/: detection_finding.rs  file_activity.rs  mod.rs  network_activity.rs  process_activity.rs
crates/libs/clawdstrike-ocsf/src/convert/: from_detection_record.rs  from_guard_result.rs  from_hubble_fact.rs  from_security_event.rs  from_tetragon_fact.rs  from_timeline_event.rs  mod.rs
crates/libs/clawdstrike-ocsf/src/objects/: actor.rs  attack.rs  evidence.rs  file.rs  finding_info.rs  metadata.rs  mod.rs  network_endpoint.rs  observable.rs  process.rs  resource.rs
crates/libs/clawdstrike-ocsf/tests/: golden.rs  proptest_roundtrip.rs
crates/libs/clawdstrike-policy-event/: Cargo.toml
crates/libs/clawdstrike-policy-event/src/: bridge.rs  decision.rs  event.rs  facade.rs  lib.rs  ocsf.rs  simulate.rs  stream.rs  synth.rs
crates/libs/clawdstrike-policy-event/tests/: bridge_test.rs  gen_golden_fixtures.rs  ocsf_test.rs  simulate_test.rs  stream_test.rs  synth_test.rs
crates/libs/logos-ffi/: Cargo.toml
crates/libs/logos-ffi/src/: formula.rs  lib.rs  operators.rs  proof.rs  routing.rs
crates/libs/logos-z3/: Cargo.toml
crates/libs/logos-z3/src/: checker.rs  lib.rs  translation.rs
crates/services/clawdstrike-brokerd/: Cargo.toml
crates/services/clawdstrike-brokerd/src/: api.rs  capability.rs  config.rs  lease.rs  lib.rs  main.rs  operator.rs  state.rs
crates/services/clawdstrike-brokerd/src/provider/: generic_https.rs  github.rs  mod.rs  openai.rs  slack.rs
crates/services/clawdstrike-brokerd/src/secret_provider/: mod.rs
crates/services/clawdstrike-brokerd/tests/: e2e.rs
crates/services/clawdstrike-registry/: Cargo.toml
crates/services/clawdstrike-registry/src/: auth.rs  config.rs  db.rs  index.rs  keys.rs  main.rs  oidc.rs  state.rs  storage.rs
crates/services/clawdstrike-registry/src/api/: checkpoint.rs  download.rs  index.rs  info.rs  mod.rs  org.rs  proof.rs  publish.rs  search.rs  trusted_publishers.rs  yank.rs
crates/tests/e2e-posture-cmd/: Cargo.toml
crates/tests/e2e-posture-cmd/src/: main.rs
crates/tests/formal-diff-tests/: Cargo.toml  proptest.toml
crates/tests/formal-diff-tests/src/: generators.rs  harness.rs  lib.rs  spec.rs
crates/tests/formal-diff-tests/tests/: aggregate_diff.rs  cycle_diff.rs  merge_diff.rs
crates/tests/sdr-integration-tests/: Cargo.toml
crates/tests/sdr-integration-tests/tests/: bridge_roundtrip_test.rs  e2e_pipeline.rs  k8s_audit_bridge_reliability.rs
cursor-plugin/: .mcp.json  README.md  bun.lockb  package.json
docs/: DOCS_MAP.md  HANDOFF.md  README.md  REPO_MAP.md  moon.yml
examples/: README.md
examples/multi-agent-orchestration/: Cargo.toml
fixtures/: README.md
fuzz/: Cargo.toml  README.md
infra/: README.md
integrations/: README.md
rulesets/: README.md  ai-agent.yaml  cicd.yaml  default.yaml  permissive.yaml  remote-desktop.yaml  spider-sense-patterns.schema.json  spider-sense.yaml  strict.yaml
scripts/: README.md  adaptive-openclaw-spine-e2e.sh  architecture-guardrails.sh  bump-version.sh  ci-changed.sh  cleanup-legacy-paths.sh  e2e-local-test.sh  helm-all-on-preflight.sh  huntronomer-playwright-smoke.sh  moon.yml  move-validation.sh  notarize-agent-macos.sh  openclaw-agent-smoke.sh  openclaw-plugin-blocked-call-e2e.sh  openclaw-plugin-install-link-smoke.sh  openclaw-plugin-runtime-common.sh  openclaw-plugin-runtime-smoke.sh  path-lint.sh  release-preflight.sh  (+11 more)
(+2818 files in other folders)
