[package]
name = "clawdstrike-workbench"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "net", "io-util", "sync", "time"] }
portable-pty = "0.8" # SEC-PTY-001: upgrade/remove once transitive `serial` is eliminated
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Local crates
hush-core = { path = "../../../crates/libs/hush-core" }
clawdstrike = { path = "../../../crates/libs/clawdstrike" }
hunt-correlate = { path = "../../../crates/libs/hunt-correlate" }
hunt-query = { path = "../../../crates/libs/hunt-query" }
clawdstrike-ocsf = { path = "../../../crates/libs/clawdstrike-ocsf" }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-stronghold = "2"
iota_stronghold = "2"
hex = "0.4"
hostname = "0.4"
sha2 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
getrandom = "0.2"
dirs-next = "2"
libc = "0.2"
regex = "1"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
