[package]
name = "darwin-telemetry-bridge"
description = "Bridges macOS process, filesystem, and log telemetry to signed Spine envelopes on NATS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["macos", "security", "telemetry", "nats", "clawdstrike"]
categories = ["network-programming", "os::macos-apis"]
readme = "../../README.md"

[[bin]]
name = "darwin-telemetry-bridge"
path = "src/main.rs"

[dependencies]
spine.workspace = true
bridge-runtime.workspace = true
hush-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["env"] }
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-nats = "0.39"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
fsevent-sys = "4"

[lints]
workspace = true
