[package]
name = "clawdstrike-logos"
description = "Bridge between ClawdStrike policy types and Logos modal-temporal logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
z3 = ["dep:logos-z3"]

[dependencies]
clawdstrike = { path = "../clawdstrike", default-features = false, features = ["full"] }
hush-core.workspace = true
hush-proxy.workspace = true
logos-ffi = { path = "../../../../../platform/crates/logos-ffi" }
logos-z3 = { path = "../../../../../platform/crates/logos-z3", optional = true }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]

[lints]
workspace = true
