[package]
name = "clawdstrike-ocsf"
description = "OCSF v1.4.0 compliant event types and converters for ClawdStrike"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ocsf", "security", "siem", "telemetry"]
categories = ["data-structures", "encoding"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1.10"

[lints]
workspace = true
