[package]
name = "clawdstrike-policy-event"
description = "Canonical PolicyEvent types, synth, simulate, bridge, and OCSF converters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["simulate", "timeline"]
simulate = ["dep:tokio", "clawdstrike/full"]
timeline = ["dep:hunt-query"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
clawdstrike = { workspace = true, default-features = false, features = ["policy-event"] }
clawdstrike-ocsf.workspace = true
hunt-query = { workspace = true, optional = true }
uuid.workspace = true
anyhow.workspace = true
base64.workspace = true
tokio = { workspace = true, features = ["rt"], optional = true }
hush-proxy.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
