[package]
name = "logos-z3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Z3 model checker integration for Logos counterexample generation"

[features]
default = []
# Link Z3 statically (requires building from source - needs cmake 3.5+)
z3-static = ["z3/static-link-z3"]

[dependencies]
logos-ffi.workspace = true

# Z3 SMT solver bindings (uses system Z3 by default)
z3 = { version = "0.12", default-features = false }

# Core types
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
