[package]
name = "logos-z3"
version = "0.2.6"
edition = "2021"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/backbay-labs/clawdstrike"
description = "Z3 model checker integration for Logos counterexample generation"

[features]
default = []
# Link Z3 statically (requires building from source - needs cmake 3.5+)
z3-static = ["z3/static-link-z3"]

[dependencies]
logos-ffi = { path = "../logos-ffi", version = "0.2.6" }

# Z3 SMT solver bindings (uses system Z3 by default)
z3 = { version = "0.12", default-features = false }

# Core types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
