[package]
name = "clawdstrike-registry"
description = "Clawdstrike package registry server"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "registry", "packages", "clawdstrike"]
categories = ["command-line-utilities"]

[[bin]]
name = "clawdstrike-registry"
path = "src/main.rs"

[dependencies]
hush-core.workspace = true
clawdstrike.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
sha2.workspace = true
rusqlite.workspace = true
toml.workspace = true
base64.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
reqwest = { workspace = true }

[lints]
workspace = true
