[package]
name = "e2e-posture-cmd"
description = "E2E test binary: sign and publish posture commands to NATS as Spine envelopes"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "e2e-posture-cmd"
path = "src/main.rs"

[dependencies]
hush-core.workspace = true
spine.workspace = true
async-nats = "0.40"
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true

[lints]
workspace = true
