[package]
name = "sdr-integration-tests"
description = "Integration tests for the full SDR pipeline: bridges, spine envelopes, checkpoints, proofs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dev-dependencies]
hush-core.workspace = true
spine.workspace = true
tetragon-bridge = { path = "../../bridges/tetragon-bridge", version = "0.2.0" }
hubble-bridge = { path = "../../bridges/hubble-bridge", version = "0.2.0" }
k8s-audit-bridge = { path = "../../bridges/k8s-audit-bridge", version = "0.2.0" }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-nats = "0.40"
reqwest = { workspace = true, default-features = false, features = ["json", "rustls"] }
futures.workspace = true

[lints]
workspace = true
